# ai-workflow-command-center

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  ai_workflow_command_center_harness_free_stack.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: errors.py
apps/api/app/api/routes/: ai_providers.py  audit_logs.py  auth.py  config.py  dashboard.py  documents.py  health.py  rag.py  reviews.py  runs.py  workflows.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  ai_providers.py  ai_runs.py  audit_logs.py  dashboard.py  documents.py  rag_index.py  reviews.py  workflows.py
apps/api/app/services/: ai_providers.py  ai_runs.py  audit_logs.py  chunking.py  dashboard.py  demo_documents.py  document_uploads.py  embeddings.py  rag.py  reviews.py  workflows.py
apps/api/tests/: test_ai_providers.py  test_ai_runs.py  test_audit_logs.py  test_auth.py  test_config.py  test_document_processing.py  test_document_upload.py  test_embeddings.py  test_foundation_routes.py  test_health.py  test_rag.py  test_rag_index.py  test_reviews.py  test_workflows.py
apps/web/: eslint.config.mjs  middleware.ts  package.json
docs/: api.md  architecture-decisions.md  architecture.md  demo-script.md  free-demo-decision.md  interview-talking-points.md  portfolio-story.md  project-harness.md  roadmap.md  security-notes.md  testing-strategy.md
scripts/: run-python.mjs  run-supabase.mjs
skills/ai-workflows/: SKILL.md
supabase/: README.md  config.toml  seed.sql
(+38 files in other folders)
